--- a/index.html
+++ b/index.html
@@ -7,16 +7,15 @@
     <script src="script (copy).js"> </script> 
     <script src="script.js"> </script> 
     <link rel="stylesheet" type="text/css" href="style.css" /> 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Acme&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
   </head> 
   <body> 
     <style>
       body {
         background-image: url("BG.jpg");
         background-size: 100%;
-        font-family: "Acme", sans-serif;
+        font-family: "Playfair Display", serif;
       }
     </style>
   <script>dt()</script>
