--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       </div>
       <div class="ctn">
         <button class="btn next">[ Lanjut ]</button>
-        <button class="btn send"><a href="https://t.me/Sancturare">Kirim Pesan</a></button>
+        <button class="btn send"><a href="https://t.me/posiesif">Kirim Pesan</a></button>
 
       </div>
     </div>
@@ -45,7 +45,7 @@ konten = [
     ucapan: "I wanna say, thank you for loving me and stay with me until now",
   },
   {
-    gambar: "GIF/5.jpg",
+    gambar: "GIF/a5.jpg",
   ucapan: "Saya minta maaf buat semua kesalahan saya. Ayo kita jadi orang yang lebih baik lagi. ",
   },
   {
